// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hFbbzE fZtzql"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-hFbbzE iSAfcg"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-hFbbzE csUPcy"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-hFbbzE kABoZg"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-hFbbzE cuHGEz"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-hFbbzE kgKmfQ"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-hFbbzE fZtzql"
  >
    Span tag
  </span>,
  <label
    className="sc-hFbbzE fZtzql"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-hFbbzE bORAXe"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-hFbbzE fdcmte"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-hFbbzE kQwsdq"
  >
    Centered Text
  </p>,
  <p
    className="sc-hFbbzE eEfFDt"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-hFbbzE jrKUls"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-hFbbzE fZtzql"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-hFbbzE djVpNu"
  >
    Uppercase Text
  </p>,
]
`;
